@@ -7,6 +7,7 @@ import com.dedicatedcode.reitti.repository.RawLocationPointRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -20,15 +21,25 @@ public class StayPointDetectionService {
     private static final Logger logger = LoggerFactory.getLogger(StayPointDetectionService.class);
 
     // Parameters for stay point detection
-    private static final double DISTANCE_THRESHOLD = 50; // meters
-    private static final long TIME_THRESHOLD = 20 * 60; // 20 minutes in seconds
-    private static final int MIN_POINTS_IN_CLUSTER = 3; // Minimum points to form a valid cluster
+    private final double distanceThreshold; // meters
+    private final long timeThreshold; // seconds
+    private final int minPointsInCluster; // Minimum points to form a valid cluster
 
     private final RawLocationPointRepository rawLocationPointRepository;
 
     @Autowired
-    public StayPointDetectionService(RawLocationPointRepository rawLocationPointRepository) {
+    public StayPointDetectionService(
+            RawLocationPointRepository rawLocationPointRepository,
+            @Value("${reitti.staypoint.distance-threshold-meters:50}") double distanceThreshold,
+            @Value("${reitti.staypoint.time-threshold-seconds:1200}") long timeThreshold,
+            @Value("${reitti.staypoint.min-points:5}") int minPointsInCluster) {
         this.rawLocationPointRepository = rawLocationPointRepository;
+        this.distanceThreshold = distanceThreshold;
+        this.timeThreshold = timeThreshold;
+        this.minPointsInCluster = minPointsInCluster;
+
+        logger.info("StayPointDetectionService initialized with: distanceThreshold={}m, timeThreshold={}s, minPointsInCluster={}",
+                distanceThreshold, timeThreshold, minPointsInCluster);
     }
 
     @Transactional(readOnly = true)
@@ -66,86 +77,75 @@ public class StayPointDetectionService {
     }
 
     private List<StayPoint> detectStayPointsFromTrajectory(List<RawLocationPoint> points) {
-        if (points.size() < MIN_POINTS_IN_CLUSTER) {
+        if (points.size() < minPointsInCluster) {
             return Collections.emptyList();
         }
 
         logger.info("Starting cluster-based stay point detection with {} points", points.size());
-        
-        // Step 1: Create clusters based on spatial proximity
-        List<List<RawLocationPoint>> clusters = createSpatialClusters(points);
-        logger.info("Created {} initial spatial clusters", clusters.size());
-        
-        // Step 2: Filter clusters based on time threshold
-        List<List<RawLocationPoint>> validClusters = filterClustersByTimeThreshold(clusters);
-        logger.info("Found {} valid clusters after time threshold filtering", validClusters.size());
-        
-        // Step 3: Convert valid clusters to stay points
-        List<StayPoint> stayPoints = validClusters.stream()
-                .map(this::createStayPoint)
-                .collect(Collectors.toList());
-        
-        return stayPoints;
-    }
-    
-    private List<List<RawLocationPoint>> createSpatialClusters(List<RawLocationPoint> points) {
+
         List<List<RawLocationPoint>> clusters = new ArrayList<>();
-        Set<RawLocationPoint> processedPoints = new HashSet<>();
-        
+        List<RawLocationPoint> currentCluster = new ArrayList<>();
+        RawLocationPoint currentPoint = null;
+        GeoPoint currentCenter = null;
         for (RawLocationPoint point : points) {
-            if (processedPoints.contains(point)) {
-                continue;
-            }
-            
-            // Start a new cluster with this point
-            List<RawLocationPoint> cluster = new ArrayList<>();
-            cluster.add(point);
-            processedPoints.add(point);
-            
-            // Find all points within DISTANCE_THRESHOLD of this point
-            for (RawLocationPoint otherPoint : points) {
-                if (processedPoints.contains(otherPoint)) {
-                    continue;
-                }
-                
-                double distance = GeoUtils.calculateHaversineDistance(point, otherPoint);
-                
-                if (distance <= DISTANCE_THRESHOLD) {
-                    cluster.add(otherPoint);
-                    processedPoints.add(otherPoint);
-                }
-            }
-            
-            // Only add clusters with enough points
-            if (cluster.size() >= MIN_POINTS_IN_CLUSTER) {
-                // Sort the cluster by timestamp
-                cluster.sort(Comparator.comparing(RawLocationPoint::getTimestamp));
-                clusters.add(cluster);
+            if (currentPoint == null) {
+                currentPoint = point;
+                currentCluster.add(point);
+                currentCenter = new GeoPoint(point.getLatitude(), point.getLongitude());
+            } else if (GeoUtils.distanceInMeters(currentCenter.latitude(), currentCenter.longitude(), point.getLatitude(), point.getLongitude()) <= distanceThreshold) {
+                currentCluster.add(point);
+                currentCenter = weightedCenter(currentCluster);
+            } else {
+                clusters.add(currentCluster);
+                currentCluster = new ArrayList<>();
+                currentCluster.add(point);
+                currentPoint = point;
+                currentCenter = new GeoPoint(point.getLatitude(), point.getLongitude());
             }
         }
-        
-        return clusters;
+
+        clusters.add(currentCluster);
+
+        logger.info("Created {} initial spatial clusters", clusters.size());
+
+        List<List<RawLocationPoint>> validClusters = filterClustersByTimeThreshold(clusters);
+        logger.info("Found {} valid clusters after time threshold filtering", validClusters.size());
+
+        // Step 3: Convert valid clusters to stay points
+        return validClusters.stream()
+                .map(this::createStayPoint)
+                .collect(Collectors.toList());
     }
-    
+
     private List<List<RawLocationPoint>> filterClustersByTimeThreshold(List<List<RawLocationPoint>> clusters) {
         List<List<RawLocationPoint>> validClusters = new ArrayList<>();
-        
+
         for (List<RawLocationPoint> cluster : clusters) {
             // Calculate the total time span of the cluster
-            Instant firstTimestamp = cluster.get(0).getTimestamp();
-            Instant lastTimestamp = cluster.get(cluster.size() - 1).getTimestamp();
-            
+            Instant firstTimestamp = cluster.getFirst().getTimestamp();
+            Instant lastTimestamp = cluster.getLast().getTimestamp();
+
             long timeSpanSeconds = Duration.between(firstTimestamp, lastTimestamp).getSeconds();
-            
-            if (timeSpanSeconds >= TIME_THRESHOLD) {
+
+            if (timeSpanSeconds >= timeThreshold) {
                 validClusters.add(cluster);
             }
         }
-        
+
         return validClusters;
     }
 
     private StayPoint createStayPoint(List<RawLocationPoint> clusterPoints) {
+        GeoPoint result = weightedCenter(clusterPoints);
+
+        // Get the time range
+        Instant arrivalTime = clusterPoints.getFirst().getTimestamp();
+        Instant departureTime = clusterPoints.getLast().getTimestamp();
+
+        return new StayPoint(result.latitude(), result.longitude(), arrivalTime, departureTime, clusterPoints);
+    }
+
+    private static GeoPoint weightedCenter(List<RawLocationPoint> clusterPoints) {
         // Calculate the centroid of the cluster using weighted average based on accuracy
         // Points with better accuracy (lower meters value) get higher weight
         double weightSum = 0;
@@ -154,10 +154,10 @@ public class StayPointDetectionService {
 
         for (RawLocationPoint point : clusterPoints) {
             // Use inverse of accuracy as weight (higher accuracy = higher weight)
-            double weight = point.getAccuracyMeters() != null && point.getAccuracyMeters() > 0 
-                ? 1.0 / point.getAccuracyMeters() 
+            double weight = point.getAccuracyMeters() != null && point.getAccuracyMeters() > 0
+                ? 1.0 / point.getAccuracyMeters()
                 : 1.0; // default weight if accuracy is null or zero
-            
+
             weightSum += weight;
             weightedLatSum += point.getLatitude() * weight;
             weightedLngSum += point.getLongitude() * weight;
@@ -165,11 +165,7 @@ public class StayPointDetectionService {
 
         double latCentroid = weightedLatSum / weightSum;
         double lngCentroid = weightedLngSum / weightSum;
-
-        // Get the time range
-        Instant arrivalTime = clusterPoints.get(0).getTimestamp();
-        Instant departureTime = clusterPoints.get(clusterPoints.size() - 1).getTimestamp();
-
-        return new StayPoint(latCentroid, lngCentroid, arrivalTime, departureTime, clusterPoints);
+        return new GeoPoint(latCentroid, lngCentroid);
     }
+
 }
