@@ -2,13 +2,16 @@ package com.dedicatedcode.reitti.service.processing;
 
 import com.dedicatedcode.reitti.config.RabbitMQConfig;
 import com.dedicatedcode.reitti.event.MergeVisitEvent;
-import com.dedicatedcode.reitti.model.ProcessedVisit;
-import com.dedicatedcode.reitti.model.SignificantPlace;
-import com.dedicatedcode.reitti.model.User;
-import com.dedicatedcode.reitti.model.Visit;
+import com.dedicatedcode.reitti.event.SignificantPlaceCreatedEvent;
+import com.dedicatedcode.reitti.model.*;
 import com.dedicatedcode.reitti.repository.ProcessedVisitRepository;
+import com.dedicatedcode.reitti.repository.SignificantPlaceRepository;
 import com.dedicatedcode.reitti.repository.UserRepository;
 import com.dedicatedcode.reitti.repository.VisitRepository;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
+import org.locationtech.jts.geom.Point;
+import org.locationtech.jts.geom.PrecisionModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
@@ -16,7 +19,6 @@ import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -28,11 +30,14 @@ public class VisitMergingService {
 
     private static final Logger logger = LoggerFactory.getLogger(VisitMergingService.class);
 
+    private static final int SRID = 4326;
+
     private final VisitRepository visitRepository;
     private final ProcessedVisitRepository processedVisitRepository;
     private final UserRepository userRepository;
     private final RabbitTemplate rabbitTemplate;
-
+    private final SignificantPlaceRepository significantPlaceRepository;
+    private final GeometryFactory geometryFactory;
     @Value("${reitti.visit.merge-threshold-seconds:300}")
     private long mergeThresholdSeconds;
     @Value("${reitti.detect-trips-after-merging:true}")
@@ -41,15 +46,18 @@ public class VisitMergingService {
     @Autowired
     public VisitMergingService(VisitRepository visitRepository,
                                ProcessedVisitRepository processedVisitRepository,
-                               UserRepository userRepository, RabbitTemplate rabbitTemplate) {
+                               UserRepository userRepository, RabbitTemplate rabbitTemplate,
+                               SignificantPlaceRepository significantPlaceRepository) {
         this.visitRepository = visitRepository;
         this.processedVisitRepository = processedVisitRepository;
         this.userRepository = userRepository;
         this.rabbitTemplate = rabbitTemplate;
+        this.significantPlaceRepository = significantPlaceRepository;
+        this.geometryFactory = new GeometryFactory(new PrecisionModel(), SRID);
+
     }
 
     @RabbitListener(queues = RabbitMQConfig.MERGE_VISIT_QUEUE)
-    @Transactional
     public void mergeVisits(MergeVisitEvent event) {
         Optional<User> user = userRepository.findByUsername(event.getUserName());
         if (user.isEmpty()) {
@@ -68,8 +76,9 @@ public class VisitMergingService {
         if (startTime == null || endTime == null) {
             allVisits = this.visitRepository.findByUserAndProcessedFalse(user);
         } else {
-            allVisits = this.visitRepository.findByUserAndStartTimeBetweenOrderByStartTimeAsc(user, Instant.ofEpochMilli(startTime), Instant.ofEpochMilli(endTime));
+            allVisits = this.visitRepository.findByUserAndStartTimeBetweenAndProcessedFalseOrderByStartTimeAsc(user, Instant.ofEpochMilli(startTime), Instant.ofEpochMilli(endTime));
         }
+
         if (allVisits.isEmpty()) {
             logger.info("No visits found for user: {}", user.getUsername());
             return Collections.emptyList();
@@ -93,7 +102,6 @@ public class VisitMergingService {
 
         if (!processedVisits.isEmpty() && detectTripsAfterMerging) {
             rabbitTemplate.convertAndSend(RabbitMQConfig.EXCHANGE_NAME, RabbitMQConfig.DETECT_TRIP_ROUTING_KEY, new MergeVisitEvent(user.getUsername(), startTime, endTime));
-
         }
         return processedVisits;
     }
@@ -105,43 +113,50 @@ public class VisitMergingService {
             return result;
         }
 
+        // Sort visits chronologically
+        visits.sort(Comparator.comparing(Visit::getStartTime));
+        
         // Start with the first visit
-        Visit currentVisit = visits.get(0);
-        SignificantPlace currentPlace = currentVisit.getPlace();
+        Visit currentVisit = visits.getFirst();
         Instant currentStartTime = currentVisit.getStartTime();
         Instant currentEndTime = currentVisit.getEndTime();
         Set<Long> mergedVisitIds = new HashSet<>();
         mergedVisitIds.add(currentVisit.getId());
+        
+        // Find or create a place for the first visit
+        List<SignificantPlace> nearbyPlaces = findNearbyPlaces(user, currentVisit.getLatitude(), currentVisit.getLongitude());
+        SignificantPlace currentPlace = nearbyPlaces.isEmpty() ? 
+                createSignificantPlace(user, currentVisit) : 
+                findClosestPlace(currentVisit, nearbyPlaces);
 
         for (int i = 1; i < visits.size(); i++) {
             Visit nextVisit = visits.get(i);
-            SignificantPlace nextPlace = nextVisit.getPlace();
-
-            // Case 1: Same place and within merge threshold
-            if (nextPlace.getId().equals(currentPlace.getId()) &&
-                    Duration.between(currentEndTime, nextVisit.getStartTime()).getSeconds() <= mergeThresholdSeconds) {
-
+            
+            // Find nearby places for the next visit
+            nearbyPlaces = findNearbyPlaces(user, nextVisit.getLatitude(), nextVisit.getLongitude());
+            SignificantPlace nextPlace = nearbyPlaces.isEmpty() ? 
+                    createSignificantPlace(user, nextVisit) : 
+                    findClosestPlace(nextVisit, nearbyPlaces);
+            
+            // Check if the next visit is at the same place and within the time threshold
+            boolean samePlace = nextPlace.getId().equals(currentPlace.getId());
+            boolean withinTimeThreshold = Duration.between(currentEndTime, nextVisit.getStartTime()).getSeconds() <= mergeThresholdSeconds;
+            
+            if (samePlace && withinTimeThreshold) {
                 // Merge this visit with the current one
-                currentEndTime = nextVisit.getEndTime();
+                currentEndTime = nextVisit.getEndTime().isAfter(currentEndTime) ?
+                        nextVisit.getEndTime() : currentEndTime;
                 mergedVisitIds.add(nextVisit.getId());
-            }
-            // Case 2: Different place or gap too large
-            else {
-                // Handle overlapping visits - if next visit starts before current ends
-                if (nextVisit.getStartTime().isBefore(currentEndTime)) {
-                    // Adjust current end time to when the next visit starts
-                    currentEndTime = nextVisit.getStartTime();
-                }
-
+            } else {
                 // Create a processed visit from the current merged set
                 ProcessedVisit processedVisit = createProcessedVisit(user, currentPlace, currentStartTime,
                         currentEndTime, mergedVisitIds);
                 result.add(processedVisit);
 
                 // Start a new merged set with this visit
-                currentPlace = nextPlace;
                 currentStartTime = nextVisit.getStartTime();
                 currentEndTime = nextVisit.getEndTime();
+                currentPlace = nextPlace;
                 mergedVisitIds = new HashSet<>();
                 mergedVisitIds.add(nextVisit.getId());
             }
@@ -154,17 +169,53 @@ public class VisitMergingService {
 
         return result;
     }
+    
+    private SignificantPlace findClosestPlace(Visit visit, List<SignificantPlace> places) {
+        return places.stream()
+            .min(Comparator.comparingDouble(place -> 
+                GeoUtils.distanceInMeters(
+                    visit.getLatitude(), visit.getLongitude(), 
+                    place.getLatitudeCentroid(), place.getLongitudeCentroid())))
+            .orElseThrow(() -> new IllegalStateException("No places found"));
+    }
 
-    private ProcessedVisit createProcessedVisit(User user, SignificantPlace place,
-                                                Instant startTime, Instant endTime,
-                                                Set<Long> originalVisitIds) {
+
+    private List<SignificantPlace> findNearbyPlaces(User user, double latitude, double longitude) {
+        // Create a point geometry
+        Point point = geometryFactory.createPoint(new Coordinate(longitude, latitude));
+        // Find places within the merge distance
+        return significantPlaceRepository.findNearbyPlaces(user.getId(), point, GeoUtils.metersToDegreesAtPosition(50, latitude)[0]);
+    }
+
+    private SignificantPlace createSignificantPlace(User user, Visit visit) {
+        // Create a point geometry
+        Point point = geometryFactory.createPoint(new Coordinate(visit.getLongitude(), visit.getLatitude()));
+
+        SignificantPlace significantPlace = new SignificantPlace(
+                user,
+                null, // name will be set later through reverse geocoding or user input
+                null, // address will be set later through reverse geocoding
+                visit.getLatitude(),
+                visit.getLongitude(),
+                point,
+                null
+        );
+        this.significantPlaceRepository.saveAndFlush(significantPlace);
+        publishSignificantPlaceCreatedEvent(significantPlace);
+        return significantPlace;
+    }
+
+    private ProcessedVisit createProcessedVisit(User user,
+                                               SignificantPlace place,
+                                               Instant startTime, Instant endTime,
+                                               Set<Long> originalVisitIds) {
         // Check if a processed visit already exists for this time range and place
         List<ProcessedVisit> existingVisits = processedVisitRepository.findByUserAndPlaceAndTimeOverlap(
                 user, place, startTime, endTime);
 
         if (!existingVisits.isEmpty()) {
             // Use the existing processed visit
-            ProcessedVisit existingVisit = existingVisits.get(0);
+            ProcessedVisit existingVisit = existingVisits.getFirst();
             logger.debug("Found existing processed visit for place ID {}", place.getId());
 
             // Update the existing visit if needed (e.g., extend time range)
@@ -204,16 +255,13 @@ public class VisitMergingService {
         }
     }
 
-    @Transactional
-    public void clearProcessedVisits(User user) {
-        List<ProcessedVisit> userVisits = processedVisitRepository.findByUser(user);
-        processedVisitRepository.deleteAll(userVisits);
-        logger.info("Cleared {} processed visits for user: {}", userVisits.size(), user.getUsername());
-    }
-
-    @Transactional
-    public void clearAllProcessedVisits() {
-        processedVisitRepository.deleteAll();
-        logger.info("Cleared all processed visits");
+    private void publishSignificantPlaceCreatedEvent(SignificantPlace place) {
+        SignificantPlaceCreatedEvent event = new SignificantPlaceCreatedEvent(
+                place.getId(),
+                place.getLatitudeCentroid(),
+                place.getLongitudeCentroid()
+        );
+        rabbitTemplate.convertAndSend(RabbitMQConfig.EXCHANGE_NAME, RabbitMQConfig.SIGNIFICANT_PLACE_ROUTING_KEY, event);
+        logger.info("Published SignificantPlaceCreatedEvent for place ID: {}", place.getId());
     }
 }
